# phantom_web

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
backend/: .env  Cargo.toml
backend/migrations/: 0001_subscribers_tales.sql  001_subscribers_table.sql
backend/src/: main.rs
backend/src/emails/: mod.rs  send_emails.rs  send_newsletter_emails.rs
backend/src/emails/emails_templates/: mod.rs  on_sub.rs
backend/src/utility/: contains_control_characters.rs  contains_x.rs  errors.rs  is_empty.rs  mod.rs
backend/src/validate/: email_test.rs  mod.rs  name_test.rs  validate_email.rs  validate_name.rs
public/images/Team/: rishaan.HEIC  vaaris.HEIC
src/: App.tsx  index.css
src/components/: CarShowCase.tsx  Cursor.tsx  Engineering.tsx  Hero.tsx  NavBar.tsx  PhantomInfo.tsx  Scroll.tsx
src/components/pages/About/: About.tsx  ImageShowcase.tsx  OurValues.tsx  Title.tsx  WhatIsPhantom.tsx  WhyPhantom.tsx  about_data.ts
src/components/pages/Community/: Community.tsx  Subscribe.tsx  Title.tsx  benefits.tsx
src/components/pages/Community/api/: sub.tsx
src/components/pages/Home/: CarShowCase.tsx  Engineering.tsx  Hero.tsx  Home.tsx  PhantomInfo.tsx  SocialMedia.tsx
src/components/pages/STEM_Racing/: CompetitionInfo.tsx  FlashCards.tsx  STEMRacing.tsx  StemInfo.tsx
src/components/pages/Sponsors/: Sponsors.tsx  SponsorsInfo.tsx
src/components/pages/Team/: Team.tsx  TeamInfo.tsx
src/constants/: index.ts
