[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sqlx = {version="0.8.6", features=["postgres", "runtime-tokio-rustls"]}
serde_json = "1"
dotenvy = "0.15"
tower-http = {version="0.6", features=["cors"]}
lettre = {version="0.11.19", features=["tokio1-native-tls", "smtp-transport"]}
tokio-cron-scheduler = "0.15.1"
